# silent-relay-harness-workshop

./: .env.example  .gitignore  01-agenda-90-min.md  02-mechanika.md  03-warianty.md  04-ocena-i-debrief.md  05-user-journey.md  06-projektowanie-dryftu.md  07-decyzja-licencje.md  08-kalibracja-trudnosci.md  INSTALL.md  README.md  WORKSHOP-APP.md  pyproject.toml
exercises-en/: 00-workshop-rules.md  01-small-town-wings.md  02-museum-condition-relay.md  03-safe-plate-queue.md  04-release-rehearsal-console.md  05-interview-evidence-map.md  06-deletion-preview-lab.md  07-meeting-parking-lot.md  08-odd-socks-lost-and-found.md  09-incident-causal-constellation.md  10-budget-scenario-sandbox.md  11-team-energy-weather.md  12-accessibility-review-lens.md  README.md
exercises-en-v2/: 02-early-shift-lift.md  03-spoke-and-wrench-planner.md  04-grow-shrink-snake.md  05-12-concept-shortlist.md  05-visitor-parking-pool.md  06-restaurant-floor-planner.md  07-club-kit-pool.md  08-community-fridge-pickup.md  09-company-van-load-planner.md  10-exam-seating-planner.md  11-apartment-maintenance-board.md  12-book-club-set-request.md  README.md
scripts/: restart-local.ps1
slides/: index.html  slides.css  slides.js
tests/: helpers.py  test_agent_runtime.py  test_api.py  test_catalog_and_routing.py  test_config.py  test_progress_hook.py  test_service_flow.py
tooling/: 01-copilot-cli-harness.md  02-copilot-sdk-acp.md  03-deepagents-build-spec.md  04-testy-akceptacyjne.md  05-start-na-devpodach.md  06-scope-gate.md  07-anty-skrot.md  README.md
workshop_runner/: __init__.py  __main__.py  (+11 more)
(+24 files in other folders)
